--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
 body {margin: auto;
-      background-color: rgb(180, 180, 180);
-      color: black;
+      background-color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
       }
 
 article {border: groove black}
 
 .heading {padding-left: 10%;
-          font-family: Impact;
+          font-family: Arial;
+          font-style: italic; 
           }
 
 img {height: 150px; width: 210px;}
 
 #last_paragraph {text-align: center;}
 
+#main_title {text-shadow: 5px 3px rgb(100, 100, 100);
+            font-family: Arial, Helvetica, sans-serif}
+
 table, th, tr, td {text-align: center;
-    border: 1px solid black;}
+    border: 1px solid white;}
